--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+
+    <title>Nicole's Portfolio</title>
+    <h1>Nicole's Portfolio</h1>
+    <h2>I'm  a Web Developer </h2>
+    <hr/>
+    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking</a>
+    <br/>
+    <img src="../4.3 HTML Porfolio Project/assets/images/movienicole.png" alt="movies">
+    <br/>
+    <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite</a>
+    <br/>
+    <img src="../4.3 HTML Porfolio Project/assets/images/birthdaynicole.png" alt="Birthday">
+    <br/>
+    <a href="../4.3 HTML Porfolio Project/public/about.html">About me</a>
+    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact me</a>
+
+</head>
+<body>
+    
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
